<resources>
    <string name="app_name">Sonder</string>
    <string name="options_tag">Tag</string>
    <string name="options_filter">Filter</string>
    <string name="options_about_us">About Us</string>
    <string name="filter_select">Select a filter</string>
    <string name="filter_text">Select Category</string>
    <string name="popup_text">Select Tag For Photo</string>
    <string name="share_image_description">Share the image</string>
    <string name="tag_image_description">Assign a tag to the image</string>
    <string name="image_description">Image</string>
    <string name="gallery_item_description">Gallery item</string>
    <string name="close_filter">Close filter</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="about_us_description">This is an app to tag photos in your gallery.</string>
    <string name="options_sync">Sync model</string>
    <string name="introduction">We are a bunch of developers who want to solve problems using technology.</string>
    <string name="about_app">In this increasingly digital world, are you worried about your privacy? Are you in a constant frenzy about losing your personal data to companies and other apps?
        We provide you an image tagging application that can categorize images without transferring any photos out of your phone.</string>
    <string name="developers"> Mipsa Patel \n Sneha Manohar \n Tilak S. Naik \n Vibha A. Karanth</string>
</resources>
