<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/sunset_portrait"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/share_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:contentDescription="@string/share_image_description"
        android:elevation="1dp"
        android:padding="8dp"
        android:src="@drawable/ic_share_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tag_image"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/tag_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:contentDescription="@string/tag_image_description"
        android:elevation="1dp"
        android:padding="8dp"
        android:src="@drawable/ic_tag_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/share_image" />

    <TextView
        android:id="@+id/image_tag_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:text="selected tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>