<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.story.sonder.AboutUsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_us_title"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="About Us"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/about_us"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/introduction"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/about_us_title" />

    <TextView
        android:id="@+id/about_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/about_app"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/about_us" />

    <TextView
        android:id="@+id/developers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="Developers"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/about_app" />

    <TextView
        android:id="@+id/developer_names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/developers"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/developers" />

</android.support.constraint.ConstraintLayout>
